avoid wrapping in global disableAll label

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -316,6 +316,7 @@ html:not(.all-disabled) {
   #disableAll-label {
     font-weight: bold;
     color: var(--red1);
+    display: inline-block;
     &::after {
       content: attr(data-off);
     }
